--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "frontend",
+  "name": "aura-ecommerce",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
