Fix Vercel deployment issues
- Add PostCSS configuration for proper Tailwind CSS processing
- Update Vercel routing configuration for SPA support
- Install missing PostCSS and Autoprefixer dependencies
- Ensure proper CSS compilation and static asset handling

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
   "version": 2,
   "routes": [
     {
+      "src": "/static/(.*)",
+      "headers": {
+        "cache-control": "s-maxage=31536000,immutable"
+      },
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
